fix error z-index

--- a/web/app/style/error.less
+++ b/web/app/style/error.less
@@ -1,4 +1,5 @@
 #error {
+  z-index: @z-index-topbar + 1;
   height: 0;
   position: absolute;
   top: 0;
